--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -3,6 +3,17 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 //ヘッダー部
+.sign_modal_wrapper {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: black;
+  background: rgba(45, 45, 45, 0.7);
+  display: none;
+}
+
 .top-content{
   position: relative;
   width: 100vw;
@@ -17,13 +28,36 @@
       display: flex;
       justify-content: space-between;
       &--list{
+        height: 30px;
+        width: 100px;
+        text-align: center;
         margin-top: 20px;
-        margin-right: 30px;
         font-weight: bold;
         color: #fff;
+        cursor: pointer;
+        position: relative;
+        display: inline-block;
+        text-decoration: none;
       }
       :last-of-type{
         margin-right: 20px;
+      }
+      li::after{
+        position: absolute;
+        bottom: 2px;
+        left: 0;
+        content: '';
+        width: 100%;
+        height: 2px;
+        background: #fff;
+        opacity: 0;
+        visibility: hidden;
+        transition: .3s;
+      }
+      li:hover::after{
+        bottom: -4px;
+        opacity: 1;
+        visibility: visible;
       }
     }
   }
@@ -109,6 +143,7 @@
                 padding-top: 10px;
                 padding-bottom: 10px;
                 font-weight: 800;
+                cursor: pointer;
               }
             }
           }
@@ -220,7 +255,6 @@
           height: 500px;
           background-color: #fff;
           border-radius: 10px;
-          border:1px solid #484848;
           img{
             border-radius: 10px 10px 0 0 / 10px 10px 0 0;
             -webkit-border-radius: 10px 10px 0 0 / 10px 10px 0 0;
