create users controller
#ユーザーコントローラー以下にdeviseコントローラーを作成した。
#ユーザーログイン・新規登録・ログアウト昨日を実装した。

--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -1,107 +1,10 @@
-<div class="sign_modal_wrapper">
-  <div class="sign_modal">
-    <div class="sign_up_modal sign_modal_content">
-      <i class="fas fa-times"></i>
-      <h2>新規登録フォーム</h2>
-      
-      <form class="new_user" id="new_user" action="/users" accept-charset="UTF-8" method="post"><input name="utf8" type="hidden" value="✓"><input type="hidden" name="authenticity_token" value="bKoMsGj6INHEzgMw6ks5JLUekhyBYJoeOO5FdIk1wruDPCpkn5zn597odkboGTJBUDNp+bjTH3+BRYJE3siJXA==">
-
-        <div class="field">
-          <label for="user_name"></label><br>
-          <input class="field__input" autofocus="autofocus" autocomplete="name" type="name" value="" name="user[name]" placeholder="Name">
-        </div>
-
-        <div class="field">
-          <label for="user_email"></label><br>
-          <input class="field__input" autofocus="autofocus" autocomplete="email" type="email" value="" name="user[email]" placeholder="Email">
-        </div>
-
-        <div class="field">
-          <label for="user_password"></label>
-          <br>
-          <input class="field__input" autocomplete="new-password" type="password" name="user[password]" aria-autocomplete="list" placeholder="Password">
-        </div>
-
-        <div class="field">
-          <label for="user_password_confirmation"></label><br>
-          <input class="field__input" autocomplete="new-password" type="password" name="user[password_confirmation]" placeholder="Password confirmation">
-        </div>
-
-        <div class="actions">
-          <input type="submit" name="commit" value="Sign up" data-disable-with="Sign up">
-        </div>
-      </form>
+  <body>
+    <%= render 'shared/mordal'%>
+    <div class="wrapper">
+    <%= render 'shared/main_content' %>
+    <div class="radius-button">
+      <%= link_to "里親を募集する", '#' %>
     </div>
-
-    <div class="sign_in_modal sign_modal_content">
-      <i class="fas fa-times"></i>
-      <h2>ログインフォーム</h2>
-      <form class="new_user" id="new_user" action="/users/sign_in" accept-charset="UTF-8" method="post"><input name="utf8" type="hidden" value="✓"><input type="hidden" name="authenticity_token" value="9+QXLjOxjPkcHmO8kzPkc3GZ9svpqWQTdIqpuCeMC7oYcjH6xNdLzwY4FsqRYe8WlLQNLtAa4XLNIW6IcHFAXQ==">
-        <div class="field">
-          <label for="user_email"></label><br>
-          <input class="field__input" autofocus="autofocus" autocomplete="email" type="email" value="" name="user[email]" placeholder="Email">
-        </div>
-
-        <div class="field">
-          <label for="user_password"></label><br>
-          <input class="field__input" autocomplete="current-password" type="password" name="user[password]" placeholder="Password">
-        </div>
-
-        <div class="field">
-          <input class="field__remember" name="user[remember_me]" type="hidden" value="0">
-          <input class="field__remember" type="checkbox" value="1" name="user[remember_me]">
-          <label class="field__remember-me" for="user_remember_me">Remember me</label>
-        </div>
-
-        <div class="actions">
-          <input type="submit" name="commit" value="Log in" data-disable-with="Log in">
-        </div>
-      </form>
     </div>
-  </div>
-</div>
-
-<div class="wrapper">
-  <div class="top-content">
-    <div class="top-content__header">
-      <a href="/" class="top-content__header--icon">
-        <%= image_tag 'logo_top.png', width: '200', height: '200' %>
-      </a>    
-      <ul class="top-content__header--lists">
-        <li class="top-content__header--lists--list">HELP</li>
-        <li class="top-content__header--lists--list sign_button sign_in_button">SIGN IN</li>
-        <li class="top-content__header--lists--list sign_button sign_up_button">SIGN UP</li>
-      </ul>
-    </div>
-    <div class="top-content__search-form">
-      <div class="top-content__search-form--box">
-        <h1 class="top-content__search-form--box--title">新しい家族を探しましょう</h1>
-      </div>
-      <div class="top-content__search-form--box--main">      
-        <form>
-          <div class="top-content__search-form--box--main--field">
-            <label for="area" class="top-content__search-form--box--main--field--label">
-              <div class="top-content__search-form--box--main--field--label--area">エリア</div>
-              <div class="">
-                <input type="text" id="area" placeholder="エリアを入力してください">
-              </div>
-            </label>
-          </div>
-          <div class="top-content__search-form--box--main--field">
-            <label for="category" class="top-content__search-form--box--main--field--label">
-              <div class="top-content__search-form--box--main--field--label--category">カテゴリ</div>
-              <div>
-                <input type="text" id="category" placeholder="カテゴリを選んでください">
-              </div>
-            </label>
-          </div>
-          <div class="top-content__search-form--box--main--field--submit">
-            <button type="submit" class="top-content__search-form--box--main--field--submit-btn">
-              <span>search</span>
-            </button>
-          </div>
-        </form>
-      </div>
-    </div>
-  </div>
-<%= render 'shared/main_content' %>
+  </body>
+</html>
