--- a/app/views/shared/_main_content.html.erb
+++ b/app/views/shared/_main_content.html.erb
@@ -1,6 +1,6 @@
 <div class="nav">
   <div class="nav__title">
-    <h2>adopetで探す</h2>
+    <h2>adopetでペットを探す</h2>
     <p>たくさんのペット達が新しい家族を探しています</p>
   </div>
   <div class="nav__link">
