--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,6 +14,158 @@
  *= require_self
  */
 
+//共通ヘッダー部
+.top-content{
+  position: relative;
+  width: 100vw;
+  height: 100vh;
+  background-image: url('top_background-image.jpg');
+  background-size: cover;
+  &__header{
+    display: flex;
+    justify-content: space-between;
+    &--icon{
+      img{
+        width: 200px;
+        height: 200px;
+      }
+    }
+    &--lists{
+      display: flex;
+      justify-content: space-between;
+      &--list{
+        height: 30px;
+        width: 100px;
+        text-align: center;
+        margin-top: 20px;
+        margin-right: 20px;
+        color: #fff;
+        font-weight: 800;
+        cursor: pointer;
+        position: relative;
+        display: inline-block;
+        text-decoration: none;
+        a{
+          text-decoration: none;
+          margin: 0 auto;
+          color: white;
+        }
+      }
+      li::after{
+        position: absolute;
+        bottom: 2px;
+        left: 0;
+        content: '';
+        width: 100%;
+        height: 2px;
+        background: #fff;
+        opacity: 0;
+        visibility: hidden;
+        transition: .3s;
+      }
+      li:hover::after{
+        bottom: -4px;
+        opacity: 1;
+        visibility: visible;
+      }
+    }
+  }
+  &__search-form{
+    opacity: 0.8;
+    background-color: #fff;
+    border-radius: 4px;
+    padding: 32px;
+    padding-bottom: 24px;
+    width: 441px;
+    box-shadow: 0 16px 40px rgba(0,0,0,0.12);
+    position: absolute;
+    left: 50px;
+    bottom: 200px;
+    &:hover{
+      opacity: 1;
+    }
+    &--box{
+      font-size: 30px;
+      line-height: 36px;
+      letter-spacing: normal;
+      color: #484848;
+      padding-top: 6px;
+      padding-bottom: 6px;
+      margin: 0px;
+      padding: 0px;
+      &--title{
+        color: #484848;
+        font-size: 1em;
+        font-weight: 800;
+        line-height: inherit;
+        margin: 0px;
+        padding: 0px;
+      }
+      &--main{
+        box-sizing: border-box;
+        background: #ffffff;
+        border-radius: 4px;
+        box-shadow: 0 0 black;
+        form{
+          display: block;
+          margin-top: 0em;
+          .top-content__search-form--box--main--field{
+            margin-top: 16px;
+            label{
+              line-height: normal;
+              .top-content__search-form--box--main--field--label--area{
+                font-size: 12px;
+                font-weight: 800;
+                letter-spacing: 1px;
+                margin-bottom: 8px;
+              }
+              div{
+                input{
+                  padding-left: 12px;
+                  padding-right: 12px;
+                  position: relative;
+                  align-items: center;
+                  background-color: #fff;
+                  border: 1px solid #EBEBEB;
+                  border-radius: 4px;
+                  display: flex;
+                  height: 48px;
+                  width: 94%;
+                }
+              }
+              .top-content__search-form--box--main--field--label--category{
+                font-size: 12px;
+                font-weight: 800;
+                letter-spacing: 1px;
+                margin-bottom: 8px;
+              }
+            }
+            &--submit{
+              margin-top: 16px;
+              display: flex;
+              justify-content: center;
+              &-btn{
+                background-color: #3EC1C9;
+                width: 150px;
+                border-radius: 15px;
+                color: #fff;
+                font-size: 16px;
+                line-height: 24px;
+                letter-spacing: normal;
+                padding-top: 10px;
+                padding-bottom: 10px;
+                font-weight: 800;
+                cursor: pointer;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+//サインイン・サインアウトのモーダル部
  .sign_modal_wrapper{
    z-index: 10;
  }
