--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -2,7 +2,7 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-//ヘッダー部
+//モーダル部
 .sign_modal_wrapper {
   position: fixed;
   width: 100%;
@@ -14,141 +14,31 @@
   display: none;
 }
 
-.top-content{
-  position: relative;
-  width: 100vw;
-  min-height: 800px;
-  max-height: 1500px;
-  background-image: url('top_background-image.jpg');
-  background-size: cover;
-  &__header{
-    display: flex;
-    justify-content: space-between;
-    &--lists{
-      display: flex;
-      justify-content: space-between;
-      &--list{
-        height: 30px;
-        width: 100px;
-        text-align: center;
-        margin-top: 20px;
-        font-weight: bold;
-        color: #fff;
-        cursor: pointer;
-        position: relative;
-        display: inline-block;
-        text-decoration: none;
-      }
-      :last-of-type{
-        margin-right: 20px;
-      }
-      li::after{
-        position: absolute;
-        bottom: 2px;
-        left: 0;
-        content: '';
-        width: 100%;
-        height: 2px;
-        background: #fff;
-        opacity: 0;
-        visibility: hidden;
-        transition: .3s;
-      }
-      li:hover::after{
-        bottom: -4px;
-        opacity: 1;
-        visibility: visible;
-      }
-    }
-  }
-  &__search-form{
+//募集リンク部
+.radius-button{
+  width: 200px;
+  height: 200px;
+  line-height: 200px;
+  position: fixed;
+  bottom: 50px;
+  right: 50px;
+  z-index: 10;
+  cursor: pointer;
+  a{
+    display: block;
+    width: 100%;
+    height: 100%;
+    text-decoration: none;
+    text-align: center;
+    font-size: 20px;
+    color: #fff;
+    background-color: #3EC1C9;
+    border-radius:50%;
+    -webkit-border-radius:50%;
+    -moz-border-radius:50%;
     opacity: 0.8;
-    background-color: #fff;
-    border-radius: 4px;
-    padding: 32px;
-    padding-bottom: 24px;
-    width: 441px;
-    box-shadow: 0 16px 40px rgba(0,0,0,0.12);
-    position: absolute;
-    left: 50px;
-    bottom: 90px;
-    &--box{
-      font-size: 30px;
-      line-height: 36px;
-      letter-spacing: normal;
-      color: #484848;
-      padding-top: 6px;
-      padding-bottom: 6px;
-      margin: 0px;
-      padding: 0px;
-      &--title{
-        color: #484848;
-        font-size: 1em;
-        font-weight: 800;
-        line-height: inherit;
-        margin: 0px;
-        padding: 0px;
-      }
-      &--main{
-        box-sizing: border-box;
-        background: #ffffff;
-        border-radius: 4px;
-        box-shadow: 0 0 black;
-        form{
-          display: block;
-          margin-top: 0em;
-          .top-content__search-form--box--main--field{
-            margin-top: 16px;
-            label{
-              line-height: normal;
-              .top-content__search-form--box--main--field--label--area{
-                font-size: 12px;
-                font-weight: 800;
-                letter-spacing: 1px;
-                margin-bottom: 8px;
-              }
-              div{
-                input{
-                  padding-left: 12px;
-                  padding-right: 12px;
-                  position: relative;
-                  align-items: center;
-                  background-color: #fff;
-                  border: 1px solid #EBEBEB;
-                  border-radius: 4px;
-                  display: flex;
-                  height: 48px;
-                  width: 94%;
-                }
-              }
-              .top-content__search-form--box--main--field--label--category{
-                font-size: 12px;
-                font-weight: 800;
-                letter-spacing: 1px;
-                margin-bottom: 8px;
-              }
-            }
-            &--submit{
-              margin-top: 16px;
-              display: flex;
-              justify-content: center;
-              &-btn{
-                background-color: #3EC1C9;
-                width: 150px;
-                border-radius: 15px;
-                color: #fff;
-                font-size: 16px;
-                line-height: 24px;
-                letter-spacing: normal;
-                padding-top: 10px;
-                padding-bottom: 10px;
-                font-weight: 800;
-                cursor: pointer;
-              }
-            }
-          }
-        }
-      }
+    &:hover{
+      opacity: 1;
     }
   }
 }
