create animal model and controller
animalモデルとコントローラーを作成
animalに紐づくarea、categoryについてもそれぞれモデルとコントローラーを作成
animalの新規投稿ビューを作成

--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -3,7 +3,7 @@
     <div class="wrapper">
     <%= render 'shared/main_content' %>
     <div class="radius-button">
-      <%= link_to "里親を募集する", '#' %>
+      <%= link_to "里親を募集する", new_animal_path %>
     </div>
     </div>
   </body>
