--- a/app/views/shared/_main_content.html.erb
+++ b/app/views/shared/_main_content.html.erb
@@ -4,7 +4,7 @@
     <p>たくさんのペット達が新しい家族を探しています</p>
   </div>
   <div class="nav__link">
-    <%= link_to "#" do %>
+    <%= link_to animals_path do %>
       <h2>すべてのペットを表示 ></h2>
     <% end %>
   </div>
