--- a/app/assets/stylesheets/animals.scss
+++ b/app/assets/stylesheets/animals.scss
@@ -1,8 +1,27 @@
-// Place all the styles related to the animals controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+//フォームメイン
+.new-animal-main{
+  background-color: #EFEFEF;
+  box-sizing: border-box;
+}
 
 //フォームヘッダー
+.new-animal-container{
+  width: 700px;
+  margin: 0 auto;
+  background: #fff;
+}
+
+.animal-container{
+  border-top: 50px solid #EFEFEF;
+  border-bottom: 100px solid #EFEFEF;
+  &--header{
+    padding: 32px 16px;
+    font-size: 22px;
+    line-height: 1.5;
+    text-align: center;
+  }
+}
+
 .animal-wrapper{
   position: relative;
   height: 1500px;
@@ -13,7 +32,7 @@
     position: relative;
     &--container{
       width: 100%;
-      height: 1280px;
+      height: 1350px;
       background-color: #fff;
       position: absolute;
       top: 50px;
@@ -31,14 +50,189 @@
   }
 }
 
-//メインフォーム
+//画像アップロードフォーム
+.animal-content{
+  padding: 40px;
+  border-top: 2px solid #EFEFEF;
+  box-sizing: border-box;
+  & div{
+    font-size: 14px;
+  }
+}
+
 .animal-form{
-  &__upload-box{
+  box-sizing: border-box;
+  &__head{
+    font-size: 16px;
+    font-weight: bold;
+    span{
+      font-size: 12px;
+      font-weight: 500;
+      margin: 0 0 0 8px;
+      padding: 2px 4px;
+      border-radius: 2px;
+      color: #fff;
+      background-color: #3EC1C9;
+      vertical-align: top;
+    }
+  }
+  &__container{
+    box-sizing: border-box;
+    display: block;
     width: 620px;
-    height: 220px;
-    padding: 40px;
+    margin: 16px auto 0;
+    &__preview-area{
+      display: inline;
+      &__images{
+        float: left;
+        display: block;
+      }
+    }
+    &__drop-area{
+      box-sizing: border-box;
+      width: 100%;
+      margin-left: 0;
+      float: right;
+      padding: 40px;
+      position: relative;
+      height: 162px;
+      background: #f5f5f5;
+      border: 1px dashed #ccc;
+      font-size: 0;
+      text-align: center;
+      cursor: pointer;
+      &.have-image-0 {
+        width: 100%;
+        margin-left: 0;
+      }
+      &.have-image-1 {
+        width: 491px;
+      }
+      &.have-image-2 {
+        width: 363px;
+      }
+      &.have-image-3 {
+        width: 234px;
+      }
+      &.have-image-4 {
+        width: 106px;
+      }
+      &__label {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        cursor: pointer;
+        .fas{
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          font-size: 20px;
+          -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+          height: 30px;
+          width: 30px;
+          color: black;
+          display: inline-block;
+          font-style: normal;
+          font-weight: 900;
+          font-variant: normal;
+          text-transform: none;
+          line-height: 1;
+          -webkit-font-smoothing: antialiased;
+        }
+      }
+    }
+    &__drop-area-second {
+      display: none;
+      width: 100%;
+      margin-left: 0;
+      float: right;
+      padding: 40px;
+      position: relative;
+      min-height: 162px;
+      background: #f5f5f5;
+      border: 1px dashed #ccc;
+      font-size: 0;
+      text-align: center;
+      cursor: pointer;
+    }
+  }
+}
+
+//float解除
+.clearfix::after{
+  content: '';
+  clear: both;
+  display: block;
+}
+
+//プレビューbox
+.iu-preview-box {
+  width: 116px;
+  box-sizing: border-box;
+  margin: 0 0 10px 10px;
+  position: relative;
+  display: inline-block;
+  border: 1px solid #eee;
+  vertical-align: top;
+  &:first-child,
+  &:nth-child(6n) {
+    margin-left: 0;
+  }
+  &__image {
+    line-height: 116px;
+    margin: 0;
+    width: auto;
+    padding: 0;
+    height: 116px;
+    position: relative;
+    overflow: hidden;
+    background: #f5f5f5;
+    & img {
+      position: static;
+      transform: none;
+      position: absolute;
+      top: 50%;
+      left: 0;
+      -webkit-transform: translate(0, -50%);
+      transform: translate(0, -50%);
+      width: 100%;
+      cursor: default;
+    }
+  }
+  &__text {
+    font-size: 14px;
+    & a {
+      display: inline-block;
+      width: 100%;
+      background: #f5f5f5;
+      line-height: 44px;
+      text-align: center;
+      border: 1px solid #eee;
+      color: #0099e8;
+      cursor: pointer;
+      text-decoration: none;
+    }
+  }
+}
+
+.visible-pc {
+  padding: 60px 0;
+}
+
+
+//名前と説明のフォーム
+.animal-form__content{
+  padding: 40px;
+  border-top: 2px solid #EFEFEF;
+  &--group:first-of-type{
+    margin-top: 0;
+  }
+  &--group{
+    margin: 40px 0 0;
     label{
-      font-size: 16px;
       font-weight: 600;
     }
     span{
@@ -50,109 +244,53 @@
       background-color: #3EC1C9;
       vertical-align: top;
     }
-    p{
-      margin: 8px 0 0;
-      line-height: 1.5;
-      font-size: 13px;
-    }
-    &__images{
-      display: block;
-      width: 620px;
-      &__uploader{
+    &__name{
+      input{
         width: 100%;
-        margin-left: 0;
-        position: relative;
-        min-height: 162px;
-        background: #EFEFEF;
-        border: 1px dashed #ccc;
-        text-align: center;
-        transition: box-shadow ease-out .3s, -webkit-box-shadow ease-out .3s;
-        cursor: pointer;
-        float: right;
-        pre{
-          position: absolute;
-          top: 50%;
-          left: 16px;
-          right: 16px;
-          text-align: center;
-          font-size: 14px;
-          line-height: 1.5;
-          transform: translate(0, -50%);
-          pointer-events: none;
-          white-space: pre-wrap;
-          word-wrap: break-word;
-        }
+        margin: 8px 0 0;
+        height: 48px;
+        border-radius: 4px;
+        border: 1px solid #EFEFEF;
+        background: #fff;
+        line-height: 1.5;
+        font-size: 16px;
+      }
+    }
+    &__text{
+      textarea{
+        margin: 8px 0 0;
+        display: block;
+        width: 100%;
+        max-width: 100%;
+        min-height: 104px;
+        border: 1px solid #EFEFEF;
+        font-size: 16px;
+        line-height: 1.5;
       }
     }
   }
-  &__content{
-    padding: 40px;
-    border-top: 2px solid #EFEFEF;
-    &--group:first-of-type{
-      margin-top: 0;
-    }
-    &--group{
-      margin: 40px 0 0;
-      label{
-        font-weight: 600;
-      }
-      span{
-        font-size: 12px;
-        margin: 0 0 0 8px;
-        padding: 2px 4px;
-        border-radius: 2px;
-        color: #fff;
-        background-color: #3EC1C9;
-        vertical-align: top;
-      }
-      &__name{
-        input{
-          width: 100%;
-          margin: 8px 0 0;
-          height: 48px;
-          border-radius: 4px;
-          border: 1px solid #EFEFEF;
-          background: #fff;
-          line-height: 1.5;
-          font-size: 16px;
-        }
-      }
-      &__text{
-        textarea{
-          margin: 8px 0 0;
-          display: block;
-          width: 100%;
-          max-width: 100%;
-          min-height: 104px;
-          border: 1px solid #EFEFEF;
-          font-size: 16px;
-          line-height: 1.5;
-        }
-      }
-    }
-    h3{
-      margin-bottom: 40px;
-      color: #484848;
-    }
-    &--group{
-      &__select{
-        select{
-          height: 48px;
-          border-radius: 4px;
-          border: 1px solid #EFEFEF;
-          font-size: 16px;
-          line-height: 1.5;
-          cursor: pointer;
-          padding: 0 16px;
-          width: 100%;
-        }
+  h3{
+    margin-bottom: 40px;
+    color: #484848;
+  }
+  &--group{
+    &__select{
+      select{
+        height: 48px;
+        border-radius: 4px;
+        border: 1px solid #EFEFEF;
+        font-size: 16px;
+        line-height: 1.5;
+        cursor: pointer;
+        padding: 0 16px;
+        width: 100%;
       }
     }
   }
 }
 
-//送信ボタン
 
+//送信ボタンフォーム
 .submit-box{
   input{
     background: #3EC1C9;
