--- a/app/views/animals/new.html.erb
+++ b/app/views/animals/new.html.erb
@@ -18,8 +18,8 @@
             </div>
             <div class="animal-form__container__drop-area">
               <%= f.fields_for :images do |i| %>
-                <%= i.label :image, class: "animal-form__container__drop-area__label" do %>
-                  <%= i.file_field :image, class: "animal-form__container__drop-area__label__file", style: "display: none;" %>                 
+                <%= i.label :image_url, class: "animal-form__container__drop-area__label" do %>
+                  <%= i.file_field :image_url, class: "animal-form__container__drop-area__label__file", multiple: true, name: "images[image_url][]", style: "display: none;" %>                 
                   <i class="fas fa-camera"></i>
                 <% end %>
               <% end %>
@@ -50,14 +50,14 @@
             <%= f.label :category, "カテゴリー" %>
             <span>必須</span>
             <div class="animal-form__content--group__select">
-              <%= f.select :category_id, Category.all.map {|category| [category.name, category.id]} %>
+              <%= f.collection_select :category, Category.all, :id, :name, include_blank: '---' %>
             </div>
           </div>
           <div class="animal-form__content--group">
             <%= f.label :area, "エリア" %>
             <span>必須</span>
             <div class="animal-form__content--group__select">
-              <%= f.select :area_id, Area.all.map {|area| [area.name, area.id]}%>
+              <%= f.collection_select :prefecture, Prefecture.all, :id, :name, include_blank: '---'%>
             </div>
           </div>
         </div>
