--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -2,6 +2,7 @@
     <%= render 'shared/mordal'%>
     <div class="wrapper">
     <%= render 'shared/main_content' %>
+    <%= render 'shared/footer'%>
     <div class="radius-button">
       <%= link_to "里親を募集する", new_animal_path %>
     </div>
