--- a/app/assets/stylesheets/animal_show.scss
+++ b/app/assets/stylesheets/animal_show.scss
@@ -247,7 +247,7 @@
   a{
     display: block;
     text-align: center;
-    button{
+    .animal_taker{
       margin: 20px 0;
       height: 56px;
       width: 100%;
@@ -257,5 +257,15 @@
       color: #fff;
       cursor: pointer;
     }
+  }
+  .animal_giver{
+    margin: 20px 0;
+    height: 56px;
+    width: 100%;
+    font-size: 16px;
+    background-color: #aaa;
+    border: 1px solid #aaa;
+    color: #fff;
+    cursor: pointer;
   }
 }
